--- a/posts/oobench1/index.qmd
+++ b/posts/oobench1/index.qmd
@@ -7,11 +7,10 @@ categories:
   - Software Weakness
   - Memory Vulnerabilities
 image: image.jpg
+include-after-body: ../footer_meta.html
 ---
 
-# Learning Software Weaknesses From the Ground Up
-
-Building a CVE embedding system with real and synthetic bugs.
+# OOBench: A bottom-up classification of memory safety vulnerabilities in C and C++
 
 Memory-related bugs are some of the most common and costly security failures in software.  
 The industry has been burned by these bugs since before the Morris Worm incident made headlines in 1988. Here we are, 37 years later, and the same class of security bugs are still happening today.
