--- a/posts/oob_bench2/index.qmd
+++ b/posts/oob_bench2/index.qmd
@@ -12,9 +12,11 @@ categories:
 
 # When Are Two Bugs the Same Bug?
 
-![Illustration of two glowing cubes](article_hero.png){.article-hero}
+![Illustration of two glowing cubes](thumbnail.png){.article-hero}
 
 *Article 2 of the OOB Bench series.*
+
+[← Article 1: Building a Bottom-Up Taxonomy](../oob_bench1/){.article-nav}
 
 In the first article, we showed that for the purpose of identifying weaknesses in C code, existing CWE labels are poorly aligned with code-centric analysis.
 The problem is not the labels themselves, but the ambiguity introduced by hierarchical specificity and by mixing causes with consequences.
@@ -25,7 +27,7 @@ If labels do not define a stable equivalence relation, classification quality ca
 
 At its core, building a classifier is a question of sameness.
 
-For the purpose of identifying memory-safety vulnerabilities, we define *same* as follows:
+For the purpose of identifying memory safety vulnerabilities, we define *same* as follows:
 
 > **Definition (Bug Sameness)**  
 > Two vulnerabilities are the same if they exhibit the same failure mechanism as visible in code and are prevented by the same class of fix.
@@ -33,7 +35,7 @@ For the purpose of identifying memory-safety vulnerabilities, we define *same* a
 This definition is:
 
 1. Operationally defined (what the code does and how it must be corrected)
-2. Non-hierarchal (flat)
+2. Nonhierarchal (flat)
 3. Independent of reporting convention and taxonomy depth
 
 In this study, we analyze approximately 1,300 CVEs.
@@ -47,7 +49,7 @@ In particular, *Judging LLM-as-a-Judge* [@liu2023judging] reports high agreement
 These results do not imply that LLMs are universally reliable judges.
 However, they suggest that LLMs can plausibly be used for **constrained judgment tasks** when the task definition is clear and the output space is limited.
 
-The task in this work-deciding whether two code examples exhibit the *same* underlying vulnerability-is intentionally framed as a pairwise judgment.
+The task in this work, deciding whether two code examples exhibit the *same* underlying vulnerability is intentionally framed as a pairwise judgment.
 Pairwise decisions of *same* versus *not same* are substantially more direct than assigning a vulnerability to a position in a predefined taxonomy.
 Hierarchical ambiguity and cause effect conflation, which complicate CWE labeling, do not arise in the same way.
 
@@ -56,7 +58,7 @@ Instead, equivalence judgments can serve as the foundation for later structure, 
 
 ## Trust, but Verify
 
-Any use of automated judgment requires explicit verification. LLM-based analysis was therefore audited at each stage of the process.
+Any use of automated judgment requires explicit verification. LLM based analysis was therefore audited at each stage of the process.
 Custom UI tooling was built to support efficient human review, allowing us to inspect code, patches, and model rationales side by side.
 
 Even with automated judgment, exhaustive pairwise comparison is infeasible. Comparing 1,300 items yields 844,350 possible pairs, which is prohibitively expensive and unnecessary.
@@ -74,7 +76,7 @@ Taxonomy here is an instrument for efficiency, not a claim about ground truth.
 
 ## Unit of Analysis
 
-Although we start from CVEs, the unit of analysis in OOB Bench is a **vulnerable code slice**: a patch-local, function-level region sufficient to explain the bug and its fix.
+Although we start from CVEs, the unit of analysis in OOB Bench is a **vulnerable code slice**: a patch local, function-level region sufficient to explain the bug and its fix.
 A single CVE may yield zero, one, or multiple such slices, depending on how many distinct vulnerable sites are present.
 
 This distinction is critical. CVEs are reporting artifacts; code slices are the objects that exhibit failure mechanisms and can be compared meaningfully.
@@ -98,7 +100,7 @@ Instead, the first schema was too granular: many slices required special-case la
 
 The problem was one of granularity. The categories were neither stable nor reusable.
 
-I reset the schema to be deliberately broader and less precise-aiming a more mid-level of granularity.
+I reset the schema to be deliberately broader and less precise aiming a more mid-level of granularity.
 Repeating the analysis under this new revised schema led to rapid convergence: the number of `other` classifications dropped quickly, and the remaining enumerations filled in quickly.
 
 In addition to structured labels, the analysis phase records the vulnerable function or functions, a concise summary, and free-form tags.
@@ -123,7 +125,7 @@ Together, they constrain classification while leaving room for judgment where th
 For the purposes of bucketing and comparison, the three values are combined into a **vulnerability signature**.
 The signature is not intended to define sameness. It serves only to group plausibly related slices and reduce the space of pairwise comparisons.
 
-To validate the analysis process, we spot-checked 30 analyzed slices across 10 distinct buckets. No material disagreements were found.
+To validate the analysis process, we spot checked 30 analyzed slices across 10 distinct buckets. No material disagreements were found.
 Custom tooling was built to support this review, including Streamlit based interfaces that allow auditors to quickly inspect code, metadata, and model outputs in a searchable format.
 
 ## Signature Is Not Sameness
